# wfcr-data-agent

./: .gitignore  README.md  dockerfile  main.py  makefile  pyproject.toml
agent/: data_agent.py
agent/nodes/: node_confluence_context.py  node_filter_tables.py  node_global_context.py  node_sql_execute.py  node_sql_gen.py
agents/: data_agent.py
agents/components/: assistant.py
agents/subagents/confluence/: node_confluence_context.py
agents/subagents/filter_tables/: filter_tables.py
agents/subagents/sql_gen/: sql_gen.py
config/: shared.toml
config/agents/: confluence_agent.toml  sql_agent.toml  table_filter.toml
config/prompts/: confluence_context.toml  filter_tables.toml  sql_gen.toml
connectors/: bq_connector.py  openai_connector.py
schemas/: data_agent_schema.py
